# qdf

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api_index.rst  conf.py  index.rst
qdf/: __init__.py
